--- a/SylDesk/SylDesk/Form1.resx
+++ b/SylDesk/SylDesk/Form1.resx
@@ -146,21 +146,25 @@
   </data>
   <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        4QAAAOEBcBgcLgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALjSURBVFhHxZfL
-        TxNRGMX71+jSxI07F+5IIBE35aEBQeQRKSkklhBISSWVlqpFiBLR+sBHYgIajRqfceHCaIxKUBZgaTtD
-        6XT6SPAVxfg558aZ3DsdSWOnZfHLzD3nyz1nZjqZ1JHL5erz+fy8xkqFmUe2QztRNWiLUFHAyqgYQoHZ
-        B49pIHi6rCCDzxQKuI+FaEeVs6wgg88UCoQj12hnTeN/c8A9SJ7jYapq7ibXcID6R8dpT0M7DYUm6XC/
-        j80gg8+0tYDLG6CxqYtU295LvvAUhaYuUYNrgLoG/RQ+P8NmylrAPzFN+zr6qNs7SsEzEXL7xti6Tbv6
-        gLbGTFkLVLf2sNDdzkPU1DfErnxXbRMd9Z9idwUzZS1QDJsWkFaTtLi0XFaQwWcKBbYCsUA6TeqzR5S+
-        f0cAGjzMZD8sFPgAOnwlm6O5xVW6uiAXAB0+nykUUG7dpISz2hJ4mJFa6ix96PDPvUvQtuvv/wl8PlMo
-        kJq5YGy45nEx9DU8zOhrubWeEnU1JB90Ghr84KuYZbAOfD7TsgCCv71+ydBLmAt8ffGcfsai7Khr8G0p
-        oIZG2OYA59DMBdbv3abfvzZo/e6cocG3pQBAsB4OzAUUr4eSR1pIGe43NPglFVBuXDE2MwMPM4nGvZY+
-        dPglFcitRCl1dpzWwgEBaPAwg1fO7APo8PkCq19+GBRVwA74AvuffDIoqkDm7RuS3R0kdzWLaBo8zKxN
-        niS5U9NMQIdf0h1QZiLWz1cDHmZ4LdnTJqzh8wWs2LSA/hbILU72Cwc4h2Z+C0Bm8oSwhm9LgfzladpQ
-        FQbOoZkL6D7QNfi2FLDCXAB3Jz0yyI66Br9iBYDtj0B9+pB9YPhNGZoGDzNyb2ehrwEd/qz2yd1uEQyg
-        w+czhQIgl0hQdnlJAJoxk8kU+AC6PhNVsvQxqRYA3djnL/hzWiBWCmQ7UqnUupVZCZDtkCRpIh6Pf47F
-        Yt8rCTIlSZr4A1T6hJRHU2v+AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        xAAADsQBlSsOGwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAO9SURBVFhHxZbb
+        TxNBGMX71/hq4otvPvhmIon6UsUYFUXFCKZoBAmIQVKgFmgFAQURBTFqFMVbvGAwooggNyFoKpeWBdwW
+        WmgExKKfe4bssrOzEEWqQ37Zme98nXP2VmqZm5ujcDhMU1NT/xR4wtsyOTlJoVDovwBvi5nwL+EC3H78
+        jNIc56IKPPSeXADbGSet3WSNKvDQe3IBXJXXaF3MzhWzy5ZOKTku2rQnkZJO51Fqrps2xh6kDGcxHUjN
+        Yj3w0HuuaoCkzDw6W3aZth5MpixXGTnLqig2KY0Op9vJVVHNeqIawF5UTtsOHaPEzFxylFSSLessW8cr
+        Z5+nrNET1QCb9x1lphus+2n3sQx25uu37qYT9kJ2VdAT1QC/w7IBhkdGqc/zOarAQ+/JBfgf8AH8fgq8
+        eEr+R/UcqEFDz0Rvj6AD1KHLE0G60zdCNT2SAOrQ9Z5cALnuJvmsm02Bhp7huO2mOurQL3b6aE1t15JA
+        13tyAb5UX9I2HEtJYqhraOhR19K+HeTbHkPSXqtWg+54N2RqrAJd72kaAMYzrW8ZaghjgOmmRvo+NMCO
+        ag36qgQIOLPZ5gBz1IwBwg/v0s/5CIXv39Fq0FclAICxag6MAeTMFBo9Ekfy6VStBv2vAsjXr2qbGYGG
+        Ht/OLaY6CAUGhAD2tjJuvWyA4OAAfSl105grjwM1aOjBK2fUAeoYMHjueUoNw82U/CqHbK/sDARBbdkA
+        K2XI08L4+KmJ3G3lmqkZrs4q7rNcgPGO9yTZDpF0eA+PUoOGnrHiApISlJoOdhWU+vnWCsHQ3XlFqBV1
+        VdNP5U8IIFdXmt5bAA09+tro0Xht3tTfKBgBjFNv3UL95cg7MYD6FkhxVvaEA8xRM74FYLw4X5uXdohn
+        CliAFjFAfsfCCZkGCF0pp0hAZmCOmjGAqgP/aB+dai7UNs9pu0DO9ksMjJIPtWzuaF98Po435S4dwAxj
+        AFwdf3Y6O/Z2P1ee+IWNM1vOUXjuK81GvjEwZucX5tORGXK8XwzxVwGA/hZktxRpG+vBMLsFqW8Wfh1z
+        AQINT9g/GL0JQ6lBQ4+UnCDqChVdNYIJWCpAcXeNGAAEfT6a+OzhQE3rGR8XdHwD9gy3cl88KjORWUpr
+        LhDqvRMeFs4SDPI/EFaEEgDU9d0TjE425wu1G55HzBzDIsvKk2626Z+AAMoxGOin+o8P2BNuNAW4QvUD
+        DRT5Ma99lt0Cn3KJvV7vikEA/fqT1E61PbfIqbyOKa8d5FCON5WzHgxLXJ/X66Vfoyto+yGxTG4AAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
