--- a/SylDesk/SylDesk/FormRegistro2.resx
+++ b/SylDesk/SylDesk/FormRegistro2.resx
@@ -293,6 +293,19 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAABOwAAATsAYpu/XIAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABZUlEQVRYR+2XzUkEQRCF+9cVFA+CB8GDJ6+yNwMwB01CMAFzMAADMAJj2AAMwCz2stDWq7WWnqZ3
+        HGaqGZRt+GComvfq0TP70yalxNCyzsQnZ8Ont2FDJGU28MYMzNrNlQtnwktF1ATM6gSgdUSNdXljQ9aY
+        uQsQTbwtbvgILrxqAs98BmbmAe7ypjf+EXVN4JnPwEzUuXkI0BeA1pW38auENEs2rvQEaMVnQoDj607v
+        BzGo9QRoxecfB3DxfR8kvhCfZgGG0ixA7UtHIPG5+DQLUOsJSu+AWaBfQvVT0e4DWvEZHUCLCTvQfQT0
+        e/7Mhjas8noNrUdwSTUM22L8Axs6/9apV4BWfEYH0GLKDpxh2/uQXSGfZV6HVnwmBKh/DAtWuJfDZHWt
+        d+CExT0EE+639y5u8jq04sO1bMbgAFqMDkCr+n9gCNCKz98NoMUhwG8B5j2Y0Jr3aAZmPZzyxSzH82S+
+        Af3K+Fst3kVtAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>38</value>
   </metadata>
