--- a/SylDesk/SylDesk/Dasometricos.resx
+++ b/SylDesk/SylDesk/Dasometricos.resx
@@ -889,4 +889,22 @@
         OkpaanqKmqq6ytrq+gobKzsDOxoIADs=
 </value>
   </data>
+  <data name="buttonBack.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        3QAAAN0BcFOiBwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAKfSURBVFhHxZfL
+        axNRFMZnp3+C7gQL2jykCGoXBpOphgbFhQsfC9GlKxFcdicquJGuVERcuFK3EUo3ioISLUVCNaSTaaOm
+        VLA1ppME26bxeM7kjpnHyWMmY+fCD5L7+L4zc+89944EAH1RGErtUENySo0kHhQi8utCWFaQqkChOmqj
+        PtSX0+BgK83khmO7UfQ+mmgI9IlGY2gsp2mGrSSKe+I7lbB8E8XqNnE31EmDtDgPgq0shuO7cHDGJjYI
+        GdLkvBwVC9HjURxQsgn4QYm07X6WP+LJ/4e5Qcn+JtrmOE/Ywc/X3omMeU38C0AsOG6A75CXJQDaLtgw
+        yGp3S93YonoAYp9zHXtSPHEBVicfsW3dIE89AMpaWOEmyegsjJ6G8uOn8GdjE37nVXi37yjbrwsaedPT
+        p5jGjqgjSVi5cw+2Kho+QKtUcgpMDR1h+3eDvCU9tzONDiJj8P36DdgsLQvbdvEcAHpL4mBhOxgsXboG
+        63N5YecsmlqEN8mz8PXUZQdfUhdZTR30lvAHnWpsBxKovXwrbLyVxmoZPofirD6iUAB0nFoaFmNnoPIs
+        DdBsChnvZX3lJ6T3Hrbom6iyAagHx+HH3YewVa0JGe+lnwDYKcBsBR9GT8Lik+fQbDSEnPvSIwCcgh6L
+        MB9KwEzyHCxPvxKSzrI2r8KLEZklfSDeOQBahP1uw0+4kGbPX4Hyxzlh2y7GNqRgOebDCVZT34ZuE1F2
+        +Bhkr05A7duSsB8wEXlNxbPRMcjdmoSNX2teA2ilYnwAz4cRLdSZQ+OQnbjtOgDyJG9fjmOa5/f7Y2xb
+        B6zHMRHohYQI/EqmBxHkpdQg0Gu5gXgTwXyYGNA8iYW5/Z9mZmi7iDyxvR+ndihrUerUz47WAebD5zlI
+        fwHUUBZUAkX89gAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
