--- a/SylDesk/SylDesk/Dasometricos.resx
+++ b/SylDesk/SylDesk/Dasometricos.resx
@@ -907,4 +907,19 @@
         fwHUUBZUAkX89gAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAN0AAADdAXBTogcAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAB+UlEQVRYR8WWMUsDQRCFg4pYCIIgWFr4Q4OFsYsIgpVYpBBsFCwsA4pYiIgIioWINhZipaAonu8t
+        M8dk2cvtJHA5+HKzL7PzHrIraRVFMTZ4+DGMfmofSYpeIrMUjQXog7awJ1rQU/tIUvRijNqyXgFPopHm
+        AoDYnDQWgH92a/4j74kcwi7gmWDdeICu6PUBpGkYm6mNFjz8UIK56NzPYmgA3VhF5WbF9O4bbRHoeeBb
+        r2dMuZlNTPxgNOIJoNeQ5lei1VEWTLMKXoxGXAGAx5yURQ9Y8295ewJsgZT5wAw8DKrfDTQqHVB7gBTp
+        I3+mPgBnUrsCdKRplAAKzWdAcgaeygDBXJpGDRDMRXcF6JmGJfAs+hs4TGH6dcYJUPM5cA+4yAqgV4jm
+        N6INxQxUTWfQnGFUzwsAUuYf4NrwCsJ3ZqD2ckZsTrICbANrrie6crPRwhpsgNicZAWwV4j/E06l9gT4
+        MjX3X0qdFUCh+TSoPcFGC2sDzeeB+xoGc2kaNUAwF90V4Bio+QJ4BFx4AlwANZ8CPLRcZAXQK0RzDlLd
+        E0Bn0HxXNJIXAMTmxBUAxOYkKwB/w8XmxBNgDcTmJCvAr6mPwLnUngDvpr4Dt1JnBVBoPgvGuYY0Xwbu
+        a/gJ1gEbqn7P6VCimq6VHUA9Z0ZZTIqk2BCt4h+p75f3alFgNAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
