--- a/SylDesk/SylDesk/DiversidadyRiqueza.resx
+++ b/SylDesk/SylDesk/DiversidadyRiqueza.resx
@@ -136,4 +136,16 @@
         fwHUUBZUAkX89gAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAOIAAADiAd2hPUMAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABH0lEQVRYR+3XMQrCQBAF0Fh6A68gXsEDpNPeC3gHC9FTWHoEG0GwFwQrOzux09pCRYn/L8sSwo+i
+        yE5hFl4gM9mdSbJgTLIsMyWDMclgTBxt6Bth7eQKR9hHxpqsnfA5pOrxKBg16IG6ozIdP7flz5uQggt+
+        2kADtqDuqswK6jD250P4roFfYU1f2x02sIiMNUMDc5gIvPBeiOXtPJUjzuUaKseaoQH5CjC6cFE5wpiS
+        yhHnQrck934PYPxPA5bcYQDsqGgEt0Isb+mpHHEu11A51gwNVHvA/BVYcodqD5g3YP5jxA+GmbCGRyGW
+        d/BUjjiXa6gca4YGqj1g2sCrz/IT8CKVo7OncsS5XEPlwme57R8T9XhiksGYZDCeLHkCtl8MlBE3rQcA
+        AAAASUVORK5CYII=
+</value>
+  </data>
 </root>
