--- a/SylDesk/SylDesk/ValordeImportancia.resx
+++ b/SylDesk/SylDesk/ValordeImportancia.resx
@@ -907,4 +907,15 @@
         fwHUUBZUAkX89gAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAP0AAAD9AeJ7g5MAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAA/klEQVRYR+2XwQmDQBBFxZt1BMQ6PKWKnHLPzVtaEAvYHFJBakgTIVWkgYDmzzLCKn9FYReSsAMP
+        xp2ZnXcSNhuGIQqIHNyBfDB6YOhwCBClLlqip8MhQFTOIj9sOASI8AKIAhzAyYPUCu2NItBMhjmN9kYR
+        6CbDnE57k8A6AcQZPMDTwyW2wHt2wNjFFGCHc6okkAR+VkByxliXZBxc4qsEbmDvQWrRBewChltHbBK4
+        AjtMkHp0AbuA4dYRSSAJJIH/FTgC9msVpO4KbPoVA9YnyE7bKK9USZYo9dLWOfPRau+6xynCaMIaBHli
+        53ppDV5g3jMitVp7VzzPM/MB+Xlx01ofXvoAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
