--- a/SylDesk/SylDesk/GenerarReporte.resx
+++ b/SylDesk/SylDesk/GenerarReporte.resx
@@ -151,4 +151,22 @@
         EOppBZCj9vMj+wG3fzBA1p4DaIB87hbOHuwc494vEwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="buttonFiltrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAN0AAADdAXBTogcAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAACi0lEQVRYR+2Wv2tTURzFr+aHtYJUCkXBQUEFZxHEyakgbW6SNrYFi+Cv9EfS1KY6iDF5SbTaIqib
+        4tRFWhSxaq0o0cnBvf+B4OIkmKQF6/WdV1/NS05vE63VIcMHmnO/33NO+khuhN9tfPSJpPoXIFvgj9jo
+        nBq58mZDQSayrQIQRrPvNhRk/j8FBs89VdHB52syNDxbaZZ5q6IRzflP7BkbZC4X2JRaDGzNqo6msTXp
+        bBlXFy6/dhhH+ma052AoNqs6dji9kIls0SauHvK5jGJ/7+OKxb8FspCJbKGU9RiOS3d6IdL/jC6sJ8hA
+        FjKRbRWwSriSZ/0NmWIs/pIurgfwRgay7NyVAkC6U9lg01iBPcc/BZ7wRkZppqMA8HuMydCuiXw8maNG
+        vwO84Anv8jzHC3BMGG7pyeR6Dtwt4iPGDGvC9IAXPOFdnud4YdMqLm6T3vR87+H7i9S0BuABL3iyrArB
+        JiiMFr83/el06+Q3ZlwN2IUHvFgGoKJNu0jsl27jSzg09Z0F6MAOduHBvG2oWIpPGEfMz21h4MwTGsTA
+        LHawyzxLoWI5UhhSetLFaPQFDSwFM5jFDvMqh4oMuTk5EGjMFoYvvaLBAGeYwSzzYFBxNcxnOt7ZfPPr
+        SOLX9R0Jz6hw17Q6H3xoXjg38phhu6tBRR3+Len5cPf0SoFTRx+onn13VGjnhPUTi+3ooKIO8xp9j3ds
+        F7CBhjO2o4OKOuoF6gXqBViBeCpnXrv3lgINmRzb0UFFHeUF+k4+UsHt1/LmtfuhTSQOsh0dVNRhF8Bv
+        /a49t/HV+7ldJLvZbDVQUQcKnNh9a0m6jAXzq/e6eeU2srlqoaIO8189Jb3GnE8k9rLz2lDiB+huoHPb
+        SBtBAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
